fix (nav bar): Fix for social media buttons overlapping nav menu items

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -129,7 +129,9 @@ main .pad img {
   background: @brand-primary;
   color: #fff;
 }
-
+.navbar-default .navbar-nav>.active.open>a {
+  background: @text-color;
+}
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
   background: #fff;
 }
